# mvt_parser_lib

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/agents/: write-tests.agent.md
.github/workflows/: ci.yml  publish.yml
examples/: run_parser.py
mvt_parser/: __init__.py  exceptions.py  models.py  parser.py
tests/: test_parser.py  test_parser_basic.py  test_parser_delays.py  test_parser_errors.py  test_parser_fields.py  test_parser_flags.py  test_parser_message_types.py  test_parser_serialization.py
