[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvt-parser"
version = "0.1.0"
description = "Python library to parse IATA MVT flight movement messages"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Edgaras Norvaisa" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["aviation", "flights", "mvt", "parser", "iata", "oag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/noredgaras/mvt_parser_lib"
Repository = "https://github.com/noredgaras/mvt_parser_lib"
Issues = "https://github.com/noredgaras/mvt_parser_lib/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
mvt_parser = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
